--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PROJECT</title>
-</head>
-<body>
-    <!-- navbar / header -->
-    <div class="navbar">
-    <a href="">Home</a>
-    <a href="">Our Packages</a>
-    <a href="">Call Us</a>
-    </div>
 
-    <div class="judul">
-    <h1>"YOUR TRUSTED HEALTHY FOOD PROVIDER"</h1>
-    </div>
+    <!-- CSS?\ -->
+     <link rel="stylesheet" href="css/styles.css"> 
+  </head>
 
-    <div class="slogan">
-    <h4>Happiness and health number 1</h4>
+  <body>
+    <!-- navigation &  header -->
+
+    <!-- logo -->
+     <header class="main-header">
+
+     <div class="logo">
+     </div>
+
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#" class="no-border-radius">Our Packages</a>
+      <a href="#">Call Us</a>
     </div>
+    </header>
 
     <!-- content -->
+      <header>
+      <h1>"YOUR TRUSTED HEALTHY FOOD PROVIDER"</h1>
+      <h4>Your Happines is Our Happines</h4>
+    </div>
+      </header>
 
+      <section>
+    <!-- Benner Autoslide -->
+     <aside></aside>
+
+     <!-- Form Contact Us-->
+    <aside></aside>
+      </section>
+      
     <!-- footer -->
-</body>
+  </body>
 </html>
